# matlab-igraph

./: .astylerc  .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.org  LICENSE  Makefile  README.md  README.org  buildfile.m  buildtoolbox.m  flake.nix
.github/workflows/: build.yaml  buildAllToolboxes.m  hugo.yaml  joss.yaml  matlab.yaml  publish.yaml  release.yaml  test.yaml
benchmarks/: CMakeLists.txt  reprConversion.m
benchmarks/mex/: convertGraph.c
benchmarks/private/: randGraph.m
docs/: hugo.yaml
docs/content/: _index.org
docs/content/docs/: _index.org  contributing.org  goals.org  installation.org  mxIgraph.org  usage.org
docs/content/start/: _index.md
mex/: CMakeLists.txt  mexIgraphCluster.c  mexIgraphCompare.c  mexIgraphCorrelatedPairs.c  mexIgraphDispatcher.c  mexIgraphFunctions.h  mexIgraphIsDirected.c  mexIgraphIsIsomorphic.c  mexIgraphIsSubIsomorphic.c  mexIgraphIsTree.c  mexIgraphOptimalModularity.c  mexIgraphRNG.c  mexIgraphRandGame.c  mexIgraphRead.c  mexIgraphRewire.c  mexIgraphVersion.c  mexIgraphVersion.h.in  mexIgraphWrite.c  utils.h
mex/private/: mexIgraphBenchmark.c  mexIgraphCentrality.c  mexIgraphCluster.c  mexIgraphCompare.c  mexIgraphCorrelatedPairs.c  mexIgraphFamous.c  mexIgraphGenerate.c  mexIgraphIsIsomorphic.c  mexIgraphIsTree.c  mexIgraphLayout.c  mexIgraphModularity.c  mexIgraphOptimalModularity.c  mexIgraphRNG.c  mexIgraphRandGame.c  mexIgraphRead.c  mexIgraphReindexMembership.c  mexIgraphRewire.c  mexIgraphSetHandler.c  mexIgraphWrite.c
mxIgraph/: CMakeLists.txt  Makefile
mxIgraph/include/: mxIgraph.h
mxIgraph/src/: mxArgumentParsers.c  mxError.c  mxGraph.c  mxHandler.c  mxHelpers.c  mxIterators.c  mxIterators.h  mxPartition.c  mxPredicate.c  mxRandom.cpp  mxStructure.c  pmt.h  scratch.c
paper/: paper.bib  paper.md
tests/: CMakeLists.txt  Makefile
tests/mxIgraph/: TestMxGraph.m  TestMxPartition.m  TestMxPredicate.m  TestMxRandom.m
tests/mxIgraph/mex/: igraphRandi.c  testECount.c  testIsDirected.c  testIsSquare.c  testIsSymmetric.c  testIsTriL.c  testIsTriU.c  testIsVector.c  testIsWeighted.c  testReproduceAdj.c  testReproducePartition.c  testVCount.c  testVectorLength.c
tests/mxIgraph/private/: addWeights.m  randomGraph.m
tests/toolbox/: TestCompare.m  TestGenerators.m  TestIO.m  TestRNG.m
toolbox/: CMakeLists.txt  GettingStarted.mlx  Makefile  gettingStarted.mlx  igraph.m
toolbox/+igraph/: benchmark.m  centrality.m  cluster.m  compare.m  convert.m  correlatedPair.m  edgeDensity.m  famous.m  generate.m  isdirected.m  isisomorphic.m  ismulti.m  issubisomorphic.m  istree.m  isweighted.m  layout.m  load.m  modularity.m  numedges.m  numnodes.m  optimalModularity.m  plot.m  postinstall.m  randgame.m  reindexMembership.m  rewire.m  rng.m  save.m  summary.m  treeRoot.m  verbose.m  version.m
toolbox/+igraph/+args/: GraphOutProps.m  hasEdgeAttr.m  hasNodeAttr.m  mustBeGraph.m  mustBePartition.m  setGraphInProps.m  setGraphOutProps.m  struct2graph.m
toolbox/+igraph/private/: generatePreference.m  guessFileFormat.m  isoptionset.m  mustBeAdj.m  mustBeLogicalOrAuto.m  mustBeMemberi.m  mustBeMode.m  mustBePartition.m  mustBeSquare.m  parseOptionsAsymmetricPreference.m  parseOptionsAtlas.m  parseOptionsBarabasi.m  parseOptionsBarabasiAging.m  parseOptionsCallawayTraits.m  parseOptionsCirculant.m  parseOptionsCitation.m  parseOptionsCitedType.m  parseOptionsCitingCitedType.m  parseOptionsDegSeq.m  parseOptionsDotProduct.m  parseOptionsErdosRenyi.m  parseOptionsForestFire.m  parseOptionsFull.m  parseOptionsGrg.m  parseOptionsGrowingRandom.m  parseOptionsHSBM.m  parseOptionsKRegular.m  parseOptionsKaryTree.m  parseOptionsKautz.m  parseOptionsLastCit.m  parseOptionsPetersen.m  parseOptionsPreference.m  parseOptionsPrufer.m  parseOptionsRecentDegree.m  parseOptionsRecentDegreeAging.m  parseOptionsRegularTree.m  parseOptionsRing.m  parseOptionsSBM.m  parseOptionsSimpleInterconnectedIslands.m  parseOptionsStar.m  (+4 more)
toolbox/+igutils/: GraphInProps.m  GraphOutProps.m  datatypes.m  graph2struct.m  hasEdgeAttr.m  hasNodeAttr.m  isgraph.m  isoptionset.m  listEdgeAttrs.m  mustBeGraph.m  mustBeMemberi.m  mustBeMode.m  mustBePartition.m  mustBeSquare.m  mustHoldEdgeAttr.m  mustHoldNodeAttr.m  representations.m  setGraphInProps.m  setGraphOutProps.m  validateEdgeAttr.m  validateNodeAttr.m
toolbox/doc/: GettingStarted.mlx
toolbox/examples/: attributes.mlx  handlers.mlx  random_numbers.mlx
toolbox/mex/: mexIgraphCentrality.c  mexIgraphCompare.c  mexIgraphFamous.c  mexIgraphGenerate.c  mexIgraphIsDirected.c  mexIgraphIsIsomorphic.c  mexIgraphIsSubIsomorphic.c  mexIgraphIsTree.c  mexIgraphLayout.c  mexIgraphModularity.c  mexIgraphRandGame.c  mexIgraphRead.c  mexIgraphRewire.c  mexIgraphSetHandler.c  mexIgraphWrite.c
